feat!: remove support for manual object deletion refactor: remove storage-level instance references refactor: overhaul data migrating process using temporary tables and eliminate intermediate states from old migration (e.g., forwarding pointers, previous ID, relocate ID,  eager reference, forwarded reference, out of line value objects, separate child, pending child) refactor: replace MyBatis with direct JDBC mappers refactor: remove BlocMapper, BlockManager, RegionMapper, RegionManager, StoreManager feat!: remove metadata change log (Version) chore: add version field to entity binary format chore: add support for string values in index bytes parsing